[package]
name = "dexlib"
version = "0.5.0"
authors = ["Rohit Kumar <letmutx@gmail.com>", "Sculas <contact@sculas.xyz>"]
edition = "2018"
description = "Rust parser/writer for Android's dex format"
repository = "https://github.com/Sculas/dexlib-rs.git"
license = "MIT"
readme = "README.md"
keywords = ["dex", "android", "parser", "dexlib"]

[dependencies]
cesu8 = "1.1"
scroll = "0.11"
scroll_derive = "0.11"
memmap = "0.7.0"
lru = "0.8"
num-traits = "0.2"
num-derive = "0.3"
bitflags = "1.2.1"
log = "0.4.8"
getset = "0.1"
adler32 = "1.0.4"

[dev-dependencies]
tempfile = "3.0"
env_logger = "0.10"
